@@ -1,4 +1,4 @@
-# $Id: 00default.rb,v 1.42 2005-07-12 08:13:20 fdiary Exp $
+# $Id: 00default.rb,v 1.43 2005-07-12 08:34:17 fdiary Exp $
 # Copyright (C) 2002-2003 TAKEUCHI Hitoshi <hitoshi@namaraii.com>
 
 #==============================
@@ -194,7 +194,7 @@ def create_menu(data, command)
       menu << cmd
     end
     menu_proc.each {|i| menu << i}
-    menu << %Q!<a accesskey="l" href="#{@conf.cgi_name}?c=login">#{@conf.msg_login}</a>! unless @user || @conf.password.empty?
+    menu << %Q!<a accesskey="l" href="#{@conf.cgi_name}?c=login#{@page ? ";p=#{@page}" : ""}">#{@conf.msg_login}</a>! unless @user || @conf.password.empty?
     menu << %Q!<a accesskey="m" href="#{@conf.cgi_name}?c=admin">#{@conf.msg_admin}</a>! if admin?
     menu << %Q!<a accesskey="l" href="#{@conf.cgi_name}?c=logout">#{@conf.msg_logout}</a>! if @user && !@conf.password.empty?
   end
