@@ -1,4 +1,8 @@
 2005-07-12  Kazuhiko  <kazuhiko@fdiary.net>
+	* hiki/command.rb (cmd_login), plugin/00default.rb (create_menu),
+	template/login.html: redirect to the current page (suggested by
+	hadai).
+
 	* misc/plugin/attach/attach.rb (attach_map): unescape page
 	names (by NAGASAKI).
 
